--- a/css/estilosrh.css
+++ b/css/estilosrh.css
@@ -1,3 +1,6 @@
+/* ------------ GOOGLE FONTS ------------ */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Merienda+One&family=Nunito:wght@200;300;400;500;600&display=swap');
 
 :root {
@@ -7,6 +10,11 @@
     --light-color: #666;
     --border: .2rem solid var(--black);
     --box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+    --font: 'Poppins', sans-serif;
+
+     /* COLORS */
+  --color: #9176FF;
+  --bg-color: #f4f4f4;
 }
 
 * {
@@ -35,6 +43,7 @@
 
 ::-webkit-scrollbar-thumb {
     background-color: var(--main-color);
+    border-radius: 5rem;
 }
 
 html {
@@ -414,12 +423,12 @@ section {
 
 
 .projects .box-container .box .content i {
-    font-size: 3.5rem;
+    font-size: 2rem;
     color: var(--white);
 }
 
 .projects .box-container .box:hover .content i {
-    font-size: 3.5rem;
+    font-size: 2rem;
     color: var(--black);
 }
 
@@ -431,6 +440,17 @@ section {
 
 .projects .box-container .box:hover .content p {
     font-size: 1.5rem;
+    color: var(--black);
+    padding: .5rem 0;
+}
+.projects .box-container .box .content h3 {
+    font-size: 1.8rem;
+    color: #eee;
+    padding: .5rem 0;
+}
+
+.projects .box-container .box:hover .content h3 {
+    font-size: 1.8rem;
     color: var(--black);
     padding: .5rem 0;
 }
@@ -457,6 +477,93 @@ section {
     font-size: 2rem;
     color: var(--black);
 }
+
+
+/* ----------- SLIDER ------------ */
+.swiper{
+    width: 100%;
+  }
+  
+  .swiper-wrapper{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+  }
+  
+  .card{
+    width: 30em;
+    height: 80%;
+    background-color: #fff;
+    border-radius: 2em;
+    box-shadow: 0 0 2em rgba(0, 0, 0, .2);
+    padding: 1em 1em;
+  
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  
+    margin: 0 3em;
+  }
+  
+  .swiper-slide:not(.swiper-slide-active){
+    filter: blur(0.8px);
+  }
+  
+  
+  .card__image{
+    width: 20em;
+    height: 20em;
+    border-radius: 50%;
+    border: 5px solid var(--main-color);
+    padding: 3px;
+    margin-bottom: 2em;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+  }
+  
+  .card__image img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  
+  .card__content{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  
+  .card__title{
+    font-size: 2rem;
+    font-weight: 500;
+    position: relative;
+    top: .2em;
+  }
+  
+  .card__name{
+    color: var(--main-color);
+    font-size: 20px;
+  }
+  
+  .card__text{
+    text-align: center;
+    font-size: 1.5rem;
+    margin: 1em 0;
+  }
+  
+  .linkedin-swiper{
+    background-color: var(--main-color);
+    color: #fff;
+    font-size: 2.5rem;
+    border: none;
+    padding: .7rem;
+    border-radius: 2.5rem;
+    cursor: pointer;
+    height: 35px;
+  }
 
 .contact .row {
     display: -webkit-box;
