--- a/css/estilosrh.css
+++ b/css/estilosrh.css
@@ -327,7 +327,7 @@ section {
 
 
 .facility .box-container .box img {
-    height: 20rem;
+    height: 28rem;
     margin-bottom: .5rem;
 }
 
@@ -394,7 +394,7 @@ section {
 }
 
 .menu .box-container .box img {
-    height: 25rem;
+    height: 28rem;
     margin-bottom: .5rem;
 }
 
@@ -777,8 +777,43 @@ img {
     animation-fill-mode: both;
 }
 
+/****** ....ScrollTopButton...***/
+.ir-arriba{
+    position: fixed;
+    z-index: 999;
+    bottom: 5vh;
+    right: 5rem;
+    width: 4.5rem;
+    height: 4.5rem;
+    border-radius: 50%;
+    font-size: 2.5rem;
+    font-weight: bold;
+    background-color:#017fe5;
+    color: var(--white);
+    cursor: pointer;
+    outline: 0;
+    border: 0;
+    transition: all 0.3 ease-out;
+}
+.ir-arriba:hover{
+    color: var(--white);
+    background-color: var(--black);
+    
+}
 
 
+/****** ....ScrollColorButton...
+.scrollcolor-top-btn{
+    position: fixed;
+    z-index: 999;
+    bottom: 5vh;
+    left: 2rem;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    border: 2px solid #334;
+}
+***/
 
 
 
